objects/Authorization_Progress__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>R7A - This custom setting holds the Authorization Progress Picklist Values</description>
    <fields>
        <fullName>Chevron_Value_Progress_Status__c</fullName>
        <description>Chevron Value - Progress Status</description>
        <label>Chevron Value - Progress Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>Default Value</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Status__c</fullName>
        <description>Progress Status</description>
        <label>Progress Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorting_Value_Progress_Status__c</fullName>
        <description>Sorting Value - Progress Status</description>
        <label>Sorting Value - Progress Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Authorization Progress</label>
</CustomObject>